--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "src/poky"]
 	path = src/poky
 	url = https://github.com/yoctoproject/poky.git
+
+[submodule "src/meta-raspberrypi"]
+	path = src/meta-raspberrypi
+	url = https://github.com/agherzan/meta-raspberrypi.git
