--- a/compose.yaml
+++ b/compose.yaml
@@ -3,13 +3,10 @@ services:
     build:
       context: .
       args:
-        UID: 1000
-        GID: 1000
-        USERNAME: user
-        GROUPNAME: user
+        USERNAME: ubuntu
     container_name: yocto-builder
     privileged: true
     tty: true
     stdin_open: true
     volumes:
-      - ./src:/home/user
+      - .:/home/ubuntu
